@@ -72,7 +72,7 @@ struct MState2
   uint8_t m_posVert;
   uint8_t m_posHorz;
   void init(){m_posVert=m_posHorz=0;};
-  void check(uint8_t event, uint8_t curr, MenuFuncP *menuTab, uint8_t menuTabSize, prog_uint8_t *subTab, uint8_t subTabMax, uint8_t maxrow);
+  uint8_t check(uint8_t event, uint8_t curr, MenuFuncP *menuTab, uint8_t menuTabSize, prog_uint8_t *subTab, uint8_t subTabMax, uint8_t maxrow);
   void check_simple(uint8_t event, uint8_t curr, MenuFuncP *menuTab, uint8_t menuTabSize, uint8_t maxrow);
   void check_submenu_simple(uint8_t event, uint8_t maxrow);
 };
@@ -96,7 +96,7 @@ mstate2.check_simple(event,menu,tab,DIM(tab),lines_count-1)
 TITLE(title); \
 static MState2 mstate2; \
 static const uint8_t mstate_tab[] = __VA_ARGS__; \
-mstate2.check(event,menu,tab,DIM(tab),mstate_tab,DIM(mstate_tab)-1,lines_count-1)
+event = mstate2.check(event,menu,tab,DIM(tab),mstate_tab,DIM(mstate_tab)-1,lines_count-1)
 
 
 
