@@ -1,6 +1,6 @@
 //Automatically generated file - do not edit
-#define DATE_STR "22.11.2012"
-#define TIME_STR "23:19:13"
-#define SUB_VERS 1418-Mike
-#define SVN_VERS "ersky9x-r126"
+#define DATE_STR "24.11.2012"
+#define TIME_STR "22:44:27"
+#define SUB_VERS 1434-Mike
+#define SVN_VERS "ersky9x-r127"
 #define MOD_VERS "REVB"
